--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ packaging==25.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-decouple==3.8
+python-dotenv==1.1.1
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.5
